Update MS Word Blog Posts

--- a/_posts/2020-02-03-DL.md
+++ b/_posts/2020-02-03-DL.md
@@ -2,13 +2,13 @@
 
 ### 
 
-## Why randomize weight initialization?
+### Why randomize weight initialization?
 
 So that the hidden layers don’t compute the same things. (Symmetric)
 
 ### 
 
-## Why do we initialize the weights to a small number?
+### Why do we initialize the weights to a small number?
 
 i.e. multiplying weights by 0.01
 
