Update MS Word Blog Posts

--- a/_posts/2020-02-04-RL-W4.md
+++ b/_posts/2020-02-04-RL-W4.md
@@ -31,3 +31,41 @@ We can have 2 arrays of value functions: one for the previous and one for the ne
 ### What is a sweep?
 
 Updating all previous value functions with the newly computed value functions.
+
+### What is the policy improvement theorem?
+
+If act greedily with respect to the value functions of a given policy pi, then our new policy pi-prime will be strictly better than the original policy pi. (or equal if policy pi is already optimal.)
+
+### What is policy iteration?
+
+Repeated policy evaluation and improvement until you reach the optimal policy.
+
+From any start, policy pi, it will reach/converge to an optimal policy.
+
+Starting Policy -\> Evaluate -\> Improve -\> Evaluate -\> Improve -\> Optimal Policy.
+
+1.  Evaluate a policy's value functions.
+
+2.  Improve policy by acting greedily with respect to the value functions.
+    
+    1.  New policy is strictly better than previous one.
+    
+    2.  But by changing the policy, you no longer know the current policy's value functions.
+
+3.  Evaluate the new/current policy's value functions
+
+4.  Improve policy. Repeat.
+
+5.  When there is no more improvement, then it has converged.
+
+### Bellman equation vs Bellman optimality equation
+
+Bellman equation =\> we can rewrite our value functions recursively.
+
+Bellman optimality equation =\> we can rewrite our value functions recursively and in terms of itself (i.e. without policy). This is only possible because the optimal policy assumes that you're taking the max/acting greedily. We replace the policy with max/argmax, enabling us to rewrite it in terms of value functions only. Use bellman optimality equation as our update rule and continuously update our value functions.
+
+### Argmax vs Max
+
+Max = returns maximum value.
+
+Argmax = returns the parameter at which value is maximum.
