--- a/_posts/2020-02-05-LA.md
+++ b/_posts/2020-02-05-LA.md
@@ -1,6 +1,6 @@
 # \[LA\] Linear Algebra Learnings 2020-02-03\~09
 
-### What is a subspace?
+## What is a subspace?
 
 All the possible points/area the linear combinations of the column vectors can reach.
 
@@ -8,10 +8,12 @@ Linear subspace = a set, a linear combination should result into still being in 
 
 Subspace rule:
 
-1.  Any linear combination should be still in the subspace (or set)
+1.  Any linear combination of an element of the subspace should be still in the subspace.
 
-But apparently there some rules to a subspace like:
+2.  Must pass through 0/origin.
+    
+    1.  A line or plane must pass through the origin.
 
-1.  Must be able to reach a 0 vector/origin.
+## What is a column space?
 
-2.  A line or plane must pass through the origin.
+## What is a
