Update MS Word Blog Posts

--- a/_posts/2020-02-05-LA.md
+++ b/_posts/2020-02-05-LA.md
@@ -1,6 +1,6 @@
 # \[LA\] Linear Algebra Learnings 2020-02-03\~09
 
-## What is a subspace?
+### What is a subspace?
 
 All the possible points/area the linear combinations of the column vectors can reach.
 
@@ -13,7 +13,17 @@ Subspace rule:
 2.  Must pass through 0/origin.
     
     1.  A line or plane must pass through the origin.
+    
+    2.  A set of solutions cannot be a subspace if it does not include a 0-vector/matrix in it's solution.
 
-## What is a column space?
+## Given: Ax = b
 
-## What is a
+### What is a column space?
+
+A subspace of the linear combinations of the column vectors.
+
+Can also be described as all the possible space/vectors, matrix A can solve for. In other words, all the possible vector-b matrix-A can transform into.
+
+### What is a null space?
+
+If b = 0, all the possible solutions matrix-x can be.
