Update MS Word Blog Posts

--- a/_posts/2020-02-05-CAL.md
+++ b/_posts/2020-02-05-CAL.md
@@ -33,3 +33,11 @@ exponent = 2
 logarithm of x^2 = 2
 
 ln(x^2) = 2
+
+### What is centered difference?
+
+A more "instant" slope by using x\_change.
+
+f(x + x\_change) – f(x- x\_change) / 2\*x\_change
+
+Apparently this is more accurate.
