--- a/_posts/2020-02-06-PS.md
+++ b/_posts/2020-02-06-PS.md
@@ -5,3 +5,19 @@
 Functions. Variables that are determined by the actual outcome.
 
 It's like Schrodinger's box, but it has a probability distribution.
+
+### What is expectation?
+
+The average value of a random variable given many independent experiments.
+
+Another interpretation is of the average value of a population.
+
+Sum of the probability or weight \* value. For all possible values.
+
+### What is the linearity of expectation?
+
+A linear change in expectation is equal to the expectation of the linear change. i.e. if it's linear, then you can switch the order of execution of expectation and linear functions.
+
+E\[g(x)\] == g(E\[x\]) but this only holds for linear equations.
+
+E\[x^2\] \!= (E\[x\])^2
